appId: com.logseq.logseq
---
- launchApp
- extendedWaitUntil:
    visible:
      id: "button.composer.expand"
    timeout: 30000
- tapOn:
    id: "button.composer.expand"
- assertVisible:
    id: "field.composer"
- assertVisible:
    id: "spacer.composer.controls"
- assertVisible:
    id: "button.send"
